Huge changes on font configurations. * Use Source Han Sans instead of WenQuanYi Micro Hei. * Use normal/default hinter instead of auto hinter. * Carefully tuned some other settings. * Make some inspections on GNOME fontconfig overriding. * Tidy up format and remove unnecessary lines.

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -2,17 +2,23 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <!-- /etc/fonts/local.conf file for local customizations -->
 <fontconfig>
-	<!-- overall settings: autohint(slight), hinting, antialias, sub-pixel(rgb) -->
+	<!--
+		Overall Settings
+	-->
 	<match target="font">
-		<edit mode="assign" name="embeddedbitmap">
+		<!-- Turn on hinting by default. Hinting is more obvious in small size. -->
+		<edit mode="assign" name="hinting">
 			<bool>true</bool>
 		</edit>
+		<!-- BCI patents are outdated. Use normal hinter now. -->
 		<edit mode="assign" name="autohint">
-			<bool>true</bool>
+			<bool>false</bool>
 		</edit>
+		<!-- Prefer a little bit "blurry" Mac OSX style rendering instead of hard XP style -->
 		<edit mode="assign" name="hintstyle">
 			<const>hintslight</const>
 		</edit>
+		<!-- Turn on antialias and sub-pixel rendering. -->
 		<edit mode="assign" name="antialias">
 			<bool>true</bool>
 		</edit>
@@ -22,10 +28,16 @@
 		<edit mode="assign" name="lcdfilter">
 			<const>lcddefault</const>
 		</edit>
+		<!-- Disable embedded bitmap (especially for Calibri, Monaco, etc.) -->
+		<edit mode="assign" name="embeddedbitmap">
+			<bool>false</bool>
+		</edit>
 	</match>
 
-	<!-- match font -->
-	<!-- disable hint for bold -->
+	<!--
+		Rules Matching Fonts
+	-->
+	<!-- Disable hint for bold characters. -->
 	<match target="font">
 		<test name="weight" compare="more">
 			<const>medium</const>
@@ -34,7 +46,7 @@
 			<bool>false</bool>
 		</edit>
 	</match>
-	<!-- fix CJK global advance -->
+	<!-- Fix CJK global advance. -->
 	<match target="font">
 		<test target="pattern" name="lang" compare="contains">
 			<string>zh</string>
@@ -68,7 +80,7 @@
 			<bool>false</bool>
 		</edit>
 	</match>
-	<!-- force hinting for (P)MingLiU -->
+	<!-- Force full hinting for (P)MingLiU. -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>MingLiU</string>
@@ -76,14 +88,23 @@
 		<edit name="autohint">
 			<bool>false</bool>
 		</edit>
-		<edit name="hinting">
-			<bool>true</bool>
-		</edit>
 		<edit mode="assign" name="hintstyle">
 			<const>hintfull</const>
 		</edit>
 	</match>
-	<!-- disable autohint & antialias for some bitmap fonts -->
+	<!-- Turn off hinting for Source Han Sans. (Hintfull might be better in fact, but hintnone will override GNOME settings.) -->
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>Source Han Sans</string>
+		</test>
+		<edit name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit mode="assign" name="hintstyle">
+			<const>hintnone</const>
+		</edit>
+	</match>
+	<!-- Disable autohint & antialias and force full hinting for some bitmap fonts. -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>宋体</string>
@@ -92,16 +113,13 @@
 			<double>16</double>
 		</test>
 		<edit mode="assign" name="autohint" >
-		  	<bool>false</bool>
+			<bool>false</bool>
 		</edit>
 		<edit mode="assign" name="antialias" >
 			<bool>false</bool>
 		</edit>
-		<edit mode="assign" name="hinting" >
-		  	<bool>true</bool>
-		</edit>
 		<edit mode="assign" name="hintstyle" >
-		  	<const>hintfull</const>
+			<const>hintfull</const>
 		</edit>
 	</match>
 	<match target="font">
@@ -112,107 +130,54 @@
 			<double>16</double>
 		</test>
 		<edit mode="assign" name="autohint" >
-		  	<bool>false</bool>
+			<bool>false</bool>
 		</edit>
 		<edit mode="assign" name="antialias" >
 			<bool>false</bool>
 		</edit>
-		<edit mode="assign" name="hinting" >
-		  	<bool>true</bool>
-		</edit>
 		<edit mode="assign" name="hintstyle" >
-		  	<const>hintfull</const>
+			<const>hintfull</const>
 		</edit>
 	</match>
 	<match target="font">
 		<test name="family">
 			<string>AR PL ShanHeiSun Uni</string>
-  		</test>
+		</test>
 		<test compare="less_eq" name="pixelsize" >
 			<double>16</double>
 		</test>
 		<edit mode="assign" name="autohint" >
-		  	<bool>false</bool>
+			<bool>false</bool>
 		</edit>
 		<edit mode="assign" name="antialias" >
 			<bool>false</bool>
 		</edit>
-		<edit mode="assign" name="hinting" >
-		  	<bool>true</bool>
-		</edit>
 		<edit mode="assign" name="hintstyle" >
-		  	<const>hintfull</const>
+			<const>hintfull</const>
 		</edit>
 	</match>
 	<match target="font">
 		<test name="family">
 			<string>AR PL New Sung</string>
-  		</test>
+		</test>
 		<test compare="less_eq" name="pixelsize" >
 			<double>16</double>
 		</test>
 		<edit mode="assign" name="autohint" >
-		  	<bool>false</bool>
+			<bool>false</bool>
 		</edit>
 		<edit mode="assign" name="antialias" >
 			<bool>false</bool>
 		</edit>
-		<edit mode="assign" name="hinting" >
-		  	<bool>true</bool>
-		</edit>
 		<edit mode="assign" name="hintstyle" >
-		  	<const>hintfull</const>
+			<const>hintfull</const>
 		</edit>
 	</match>
 
-	<!-- match pattern -->
-	<!-- replace some ugly English fonts -->
-<!--	<match target="pattern">
-		<test name="family" compare="contains">
-			<string>宋体</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>DejaVu Serif</string>
-			<string>Droid Serif</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family" compare="contains">
-			<string>SimSun</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>DejaVu Serif</string>
-			<string>Droid Serif</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family" compare="contains">
-			<string>MingLiU</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>DejaVu Serif</string>
-			<string>Droid Serif</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>AR PL ShanHeiSun Uni</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>DejaVu Serif</string>
-			<string>Droid Serif</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>AR PL New Sung</string>
-		</test>
-		<edit binding="strong" mode="prepend" name="family">
-			<string>DejaVu Serif</string>
-			<string>Droid Serif</string>
-		</edit>
-	</match>-->
-	<!-- replace some ugly chinese fonts -->
+	<!--
+		Rules Matching Patterns
+	-->
+	<!-- Replace some ugly/missing chinese fonts. -->
 	<match target="pattern">
 		<test name="family">
 			<string>AR PL ShanHeiSun Uni</string>
@@ -227,21 +192,7 @@
 			<string>WenQuanYi Bitmap Song</string>
 		</edit>
 	</match>
-	<match target="pattern">
-		<test name="family">
-			<string>AR PL New Sung</string>
-		</test>
-		<test compare="more_eq" name="pixelsize" >
-			<double>12</double>
-		</test>
-		<test compare="less_eq" name="pixelsize" >
-			<double>16</double>
-		</test>
-		<edit name="family" mode="assign" binding="same">
-			<string>WenQuanYi Bitmap Song</string>
-		</edit>
-	</match>
-	<!--change 'fixed' to 'monospace'-->
+	<!-- Replace 'fixed' with 'monospace'. -->
 	<match target="pattern">
 		<test name="family" qual="any">
 			<string>fixed</string>
@@ -250,12 +201,18 @@
 			<string>monospace</string>
 		</edit>
 	</match>
+	<!-- Font Preference -->
 	<!-- created by WenQuanYi FcDesigner v0.5 -->
 	<match target="pattern">
 		<test name="family"><string>sans-serif</string></test>
 		<edit name="family" mode="prepend" binding="strong">
-			<string>DejaVu Sans</string>
+			<string>Source Sans Pro</string>
 			<string>Droid Sans</string>
+			<string>DejaVu Sans</string>
+			<string>Source Han Sans CN</string>
+			<string>Source Han Sans TWHK</string>
+			<string>Source Han Sans JP</string>
+			<string>Source Han Sans KR</string>
 			<string>WenQuanYi Micro Hei</string>
 			<string>WenQuanYi Zen Hei</string>
 		</edit>
@@ -263,19 +220,21 @@
 	<match target="pattern">
 		<test name="family"><string>serif</string></test>
 		<edit name="family" mode="prepend" binding="strong">
-			<string>DejaVu Serif</string>
+			<string>Source Serif Pro</string>
 			<string>Droid Serif</string>
-			<string>WenQuanYi Bitmap Song</string>
+			<string>DejaVu Serif</string>
+			<string>AR PL New Sung</string>
 			<string>AR PL UMing CN</string>
 			<string>AR PL UMing TW</string>
-			<string>WenQuanYi Zen Hei</string>
+			<string>WenQuanYi Bitmap Song</string>
 		</edit>
 	</match>
 	<match target="pattern">
 		<test name="family"><string>monospace</string></test>
 		<edit name="family" mode="prepend" binding="strong">
-			<string>Droid Sans Mono</string>
 			<string>DejaVu Sans Mono</string>
+			<string>Droid Sans Mono</string>
+			<string>Source Code Pro</string>
 			<string>WenQuanYi Micro Hei Mono</string>
 			<string>WenQuanYi Zen Hei Mono</string>
 		</edit>
