--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -6,27 +6,37 @@
 		Overall Settings
 	-->
 	<match target="font">
-		<!-- Turn on hinting by default. Hinting is more obvious in small size. -->
+		<!--
+		Hinting related
+		Reference: https://weirdfellow.wordpress.com/2010/07/25/valid-autohinting-hinting-style-options/
+		* BCI is now compiled in by default.
+		* BCI is only used when autohint=false and hintstyle=medium/full.
+		* hintstyle=slight will force autohint.
+		* Prefer BCI, but forcing some fonts to use autohint.
+		* autohint does not work with subpixel rendering. Use grayscale instead.
+		* Regarding GNOME overriding, it seems the one with lower hintstyle wins. Thus use "full" by default in both places, but specify "slight" for some fonts here.
+		-->
+		<!-- Turn on hinting -->
 		<edit mode="assign" name="hinting">
 			<bool>true</bool>
 		</edit>
-		<!-- BCI patents are outdated. Use normal hinter now. -->
-		<edit mode="assign" name="autohint">
-			<bool>false</bool>
-		</edit>
-		<!-- Prefer a little bit "blurry" Mac OSX style rendering instead of hard XP style -->
-		<edit mode="assign" name="hintstyle">
-			<const>hintslight</const>
-		</edit>
-		<!-- Turn on antialias and sub-pixel rendering. -->
+		<!-- Turn on antialias -->
 		<edit mode="assign" name="antialias">
 			<bool>true</bool>
 		</edit>
+		<!-- Subpixel rendering: "none" means "grayscale" (combined with AA) -->
 		<edit mode="assign" name="rgba">
-			<const>rgb</const>
+			<const>none</const>
 		</edit>
 		<edit mode="assign" name="lcdfilter">
 			<const>lcddefault</const>
+		</edit>
+		<!-- Prefer BCI medium hint (need further tweak for some fonts) -->
+		<edit mode="assign" name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit mode="assign" name="hintstyle">
+			<const>hintmedium</const>
 		</edit>
 		<!-- Disable embedded bitmap (especially for Calibri, Monaco, etc.) -->
 		<edit mode="assign" name="embeddedbitmap">
@@ -35,18 +45,18 @@
 	</match>
 
 	<!--
-		Rules Matching Fonts
+		General Tweaks for Font Appearance
 	-->
-	<!-- Disable hint for bold characters. -->
+	<!-- Use hintslight for bold characters -->
 	<match target="font">
 		<test name="weight" compare="more">
 			<const>medium</const>
 		</test>
-		<edit name="autohint" mode="assign">
-			<bool>false</bool>
+		<edit name="hintstyle" mode="assign">
+			<const>hintslight</const>
 		</edit>
 	</match>
-	<!-- Fix CJK global advance. -->
+	<!-- Fix CJK global advance -->
 	<match target="font">
 		<test target="pattern" name="lang" compare="contains">
 			<string>zh</string>
@@ -80,31 +90,45 @@
 			<bool>false</bool>
 		</edit>
 	</match>
-	<!-- Force full hinting for (P)MingLiU. -->
+
+	<!--
+		Specific Tweaks for Some Fonts
+	-->
+	<!-- Force autohint for certain Linux fonts -->
 	<match target="font">
 		<test name="family" compare="contains">
-			<string>MingLiU</string>
+			<string>DejaVu</string>
 		</test>
 		<edit name="autohint">
-			<bool>false</bool>
-		</edit>
-		<edit mode="assign" name="hintstyle">
-			<const>hintfull</const>
+			<bool>true</bool>
 		</edit>
 	</match>
-	<!-- Turn off hinting for Source Han Sans. (Hintfull might be better in fact, but hintnone will override GNOME settings.) -->
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>Bitstream</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>URW</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<!-- Use hintfull for Source Han Sans -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>Source Han Sans</string>
 		</test>
-		<edit name="autohint">
-			<bool>false</bool>
-		</edit>
 		<edit mode="assign" name="hintstyle">
-			<const>hintnone</const>
+			<const>hintfull</const>
 		</edit>
 	</match>
-	<!-- Disable autohint & antialias and force full hinting for some bitmap fonts. -->
+	<!-- Disable antialias for some small bitmap fonts -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>宋体</string>
@@ -112,14 +136,8 @@
 		<test compare="less_eq" name="pixelsize" >
 			<double>16</double>
 		</test>
-		<edit mode="assign" name="autohint" >
-			<bool>false</bool>
-		</edit>
 		<edit mode="assign" name="antialias" >
 			<bool>false</bool>
-		</edit>
-		<edit mode="assign" name="hintstyle" >
-			<const>hintfull</const>
 		</edit>
 	</match>
 	<match target="font">
@@ -129,64 +147,29 @@
 		<test compare="less_eq" name="pixelsize" >
 			<double>16</double>
 		</test>
-		<edit mode="assign" name="autohint" >
-			<bool>false</bool>
-		</edit>
 		<edit mode="assign" name="antialias" >
 			<bool>false</bool>
-		</edit>
-		<edit mode="assign" name="hintstyle" >
-			<const>hintfull</const>
 		</edit>
 	</match>
 	<match target="font">
 		<test name="family">
-			<string>AR PL ShanHeiSun Uni</string>
+			<string>AR PL</string>
 		</test>
 		<test compare="less_eq" name="pixelsize" >
 			<double>16</double>
 		</test>
-		<edit mode="assign" name="autohint" >
-			<bool>false</bool>
-		</edit>
 		<edit mode="assign" name="antialias" >
 			<bool>false</bool>
-		</edit>
-		<edit mode="assign" name="hintstyle" >
-			<const>hintfull</const>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>AR PL New Sung</string>
-		</test>
-		<test compare="less_eq" name="pixelsize" >
-			<double>16</double>
-		</test>
-		<edit mode="assign" name="autohint" >
-			<bool>false</bool>
-		</edit>
-		<edit mode="assign" name="antialias" >
-			<bool>false</bool>
-		</edit>
-		<edit mode="assign" name="hintstyle" >
-			<const>hintfull</const>
 		</edit>
 	</match>
 
 	<!--
-		Rules Matching Patterns
+		Rules Matching against Pattern
 	-->
-	<!-- Replace some ugly/missing chinese fonts. -->
+	<!-- Replace some ugly/missing chinese fonts -->
 	<match target="pattern">
 		<test name="family">
 			<string>AR PL ShanHeiSun Uni</string>
-		</test>
-		<test compare="more_eq" name="pixelsize" >
-			<double>12</double>
-		</test>
-		<test compare="less_eq" name="pixelsize" >
-			<double>16</double>
 		</test>
 		<edit name="family" mode="assign" binding="same">
 			<string>WenQuanYi Bitmap Song</string>
