hintnone for Source Sans Han

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -119,27 +119,16 @@
 			<bool>true</bool>
 		</edit>
 	</match>
-	<!-- Use hintfull for Source Han Sans -->
+	<!-- Use hintnone for Source Han Sans (hintfull will make chars too high) -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>Source Han Sans</string>
 		</test>
 		<edit mode="assign" name="hintstyle">
-			<const>hintfull</const>
+			<const>hintnone</const>
 		</edit>
 	</match>
 	<!-- Disable antialias for some small bitmap fonts -->
-	<match target="font">
-		<test name="family" compare="contains">
-			<string>宋体</string>
-		</test>
-		<test compare="less_eq" name="pixelsize" >
-			<double>16</double>
-		</test>
-		<edit mode="assign" name="antialias" >
-			<bool>false</bool>
-		</edit>
-	</match>
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>SimSun</string>
