--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -102,6 +102,9 @@
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
+		</edit>
 	</match>
 	<match target="font">
 		<test name="family" compare="contains">
@@ -110,6 +113,20 @@
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>Liberation</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
+		</edit>
 	</match>
 	<match target="font">
 		<test name="family" compare="contains">
@@ -117,6 +134,9 @@
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
 		</edit>
 	</match>
 	<!-- Use hintnone for Source Han Sans (hintfull will make chars too high) -->
