Add MS fonts configuration (disable small-size AA) Simplify XML

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -17,29 +17,29 @@
 		* Regarding GNOME overriding, it seems the one with lower hintstyle wins. Thus use "full" by default in both places, but specify "slight" for some fonts here.
 		-->
 		<!-- Turn on hinting -->
-		<edit mode="assign" name="hinting">
+		<edit name="hinting">
 			<bool>true</bool>
 		</edit>
 		<!-- Turn on antialias -->
-		<edit mode="assign" name="antialias">
+		<edit name="antialias">
 			<bool>true</bool>
 		</edit>
 		<!-- Subpixel rendering: "none" means "grayscale" (combined with AA) -->
-		<edit mode="assign" name="rgba">
+		<edit name="rgba">
 			<const>none</const>
 		</edit>
-		<edit mode="assign" name="lcdfilter">
+		<edit name="lcdfilter">
 			<const>lcddefault</const>
 		</edit>
 		<!-- Prefer BCI medium hint (need further tweak for some fonts) -->
-		<edit mode="assign" name="autohint">
+		<edit name="autohint">
 			<bool>false</bool>
 		</edit>
-		<edit mode="assign" name="hintstyle">
+		<edit name="hintstyle">
 			<const>hintmedium</const>
 		</edit>
 		<!-- Disable embedded bitmap (especially for Calibri, Monaco, etc.) -->
-		<edit mode="assign" name="embeddedbitmap">
+		<edit name="embeddedbitmap">
 			<bool>false</bool>
 		</edit>
 	</match>
@@ -52,7 +52,7 @@
 		<test name="weight" compare="more">
 			<const>medium</const>
 		</test>
-		<edit name="hintstyle" mode="assign">
+		<edit name="hintstyle">
 			<const>hintslight</const>
 		</edit>
 	</match>
@@ -144,30 +144,131 @@
 		<test name="family" compare="contains">
 			<string>Source Han Sans</string>
 		</test>
-		<edit mode="assign" name="hintstyle">
+		<edit name="hintstyle">
 			<const>hintnone</const>
 		</edit>
 	</match>
-	<!-- Disable antialias for some small bitmap fonts -->
+	<!-- Disable antialias for some small fonts -->
+	<!-- MS fonts -->
 	<match target="font">
-		<test name="family" compare="contains">
-			<string>SimSun</string>
+		<test name="family">
+			<string>Arial</string>
 		</test>
-		<test compare="less_eq" name="pixelsize" >
-			<double>16</double>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
 		</test>
-		<edit mode="assign" name="antialias" >
+		<edit name="antialias">
 			<bool>false</bool>
 		</edit>
 	</match>
 	<match target="font">
 		<test name="family">
+			<string>Comic Sans MS</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Georgia</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Impact</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Trebuchet MS</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Verdana</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Courier New</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Times New Roman</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Tahoma</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<!-- Some Chinese bitmap fonts (generic matching) -->
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>SimSun</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="antialias">
+			<bool>false</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family" compare="contains">
 			<string>AR PL</string>
 		</test>
-		<test compare="less_eq" name="pixelsize" >
-			<double>16</double>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
 		</test>
-		<edit mode="assign" name="antialias" >
+		<edit name="antialias">
 			<bool>false</bool>
 		</edit>
 	</match>
@@ -180,16 +281,16 @@
 		<test name="family">
 			<string>AR PL ShanHeiSun Uni</string>
 		</test>
-		<edit name="family" mode="assign" binding="same">
+		<edit name="family" binding="same">
 			<string>WenQuanYi Bitmap Song</string>
 		</edit>
 	</match>
 	<!-- Replace 'fixed' with 'monospace'. -->
 	<match target="pattern">
-		<test name="family" qual="any">
+		<test name="family">
 			<string>fixed</string>
 		</test>
-		<edit name="family" mode="assign" binding="same">
+		<edit name="family" binding="same">
 			<string>monospace</string>
 		</edit>
 	</match>
