--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -139,6 +139,106 @@
 			<const>hintslight</const>
 		</edit>
 	</match>
+	<!-- Force autohint for small MS core fonts -->
+	<match target="font">
+		<test name="family">
+			<string>Arial</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Comic Sans MS</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Georgia</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Impact</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Trebuchet MS</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Verdana</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Courier New</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Times New Roman</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Tahoma</string>
+		</test>
+		<test compare="less_eq" name="pixelsize">
+			<double>16.1</double>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
 	<!-- Use hintnone for Source Han Sans (hintfull will make chars too high) -->
 	<match target="font">
 		<test name="family" compare="contains">
@@ -149,106 +249,6 @@
 		</edit>
 	</match>
 	<!-- Disable antialias for some small fonts -->
-	<!-- MS fonts -->
-	<match target="font">
-		<test name="family">
-			<string>Arial</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Comic Sans MS</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Georgia</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Impact</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Trebuchet MS</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Verdana</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Courier New</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Times New Roman</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Tahoma</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-	</match>
 	<!-- Some Chinese bitmap fonts (generic matching) -->
 	<match target="font">
 		<test name="family" compare="contains">
