--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -94,16 +94,13 @@
 	<!--
 		Specific Tweaks for Some Fonts
 	-->
-	<!-- Force autohint for certain Linux fonts -->
+	<!-- autohint/hintstyle tweaks for certain Linux fonts -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>DejaVu</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
-		</edit>
-		<edit name="hintstyle">
-			<const>hintslight</const>
 		</edit>
 	</match>
 	<match target="font">
@@ -113,39 +110,43 @@
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
-		<edit name="hintstyle">
-			<const>hintslight</const>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family" compare="contains">
-			<string>Liberation</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-		<edit name="hintstyle">
-			<const>hintslight</const>
-		</edit>
 	</match>
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>URW</string>
 		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
 		<edit name="hintstyle">
 			<const>hintslight</const>
 		</edit>
 	</match>
-	<!-- Force autohint for small MS core fonts -->
+	<!-- Force autohint for MS core fonts -->
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>Microsoft</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>MS</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Andale Mono</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
 	<match target="font">
 		<test name="family">
 			<string>Arial</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
@@ -155,9 +156,6 @@
 		<test name="family">
 			<string>Comic Sans MS</string>
 		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
@@ -165,9 +163,6 @@
 	<match target="font">
 		<test name="family">
 			<string>Georgia</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
@@ -177,9 +172,6 @@
 		<test name="family">
 			<string>Impact</string>
 		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
@@ -187,9 +179,6 @@
 	<match target="font">
 		<test name="family">
 			<string>Trebuchet MS</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
@@ -199,9 +188,6 @@
 		<test name="family">
 			<string>Verdana</string>
 		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
@@ -209,9 +195,6 @@
 	<match target="font">
 		<test name="family">
 			<string>Courier New</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
@@ -221,9 +204,6 @@
 		<test name="family">
 			<string>Times New Roman</string>
 		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
-		</test>
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
@@ -231,9 +211,6 @@
 	<match target="font">
 		<test name="family">
 			<string>Tahoma</string>
-		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
@@ -254,8 +231,8 @@
 		<test name="family" compare="contains">
 			<string>SimSun</string>
 		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
+		<test compare="less" name="pixelsize">
+			<double>16</double>
 		</test>
 		<edit name="antialias">
 			<bool>false</bool>
@@ -265,8 +242,8 @@
 		<test name="family" compare="contains">
 			<string>AR PL</string>
 		</test>
-		<test compare="less_eq" name="pixelsize">
-			<double>16.1</double>
+		<test compare="less" name="pixelsize">
+			<double>16</double>
 		</test>
 		<edit name="antialias">
 			<bool>false</bool>
