rollback to previous flavor

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -10,11 +10,13 @@
 		Hinting related
 		Reference: https://weirdfellow.wordpress.com/2010/07/25/valid-autohinting-hinting-style-options/
 		* BCI is now compiled in by default.
-		* BCI is only used when autohint=false and hintstyle=medium/full.
-		* hintstyle=slight will force autohint.
+		* Adobe CFF is now supported.
+		* BCI is used when autohint=false.
+		* CFF only works with full hinting.
 		* Prefer BCI, but forcing some fonts to use autohint.
+		* Prefer slight hint, but forcing some fonts to use full hint.
 		* autohint does not work with subpixel rendering. Use grayscale instead.
-		* Regarding GNOME overriding, it seems the one with lower hintstyle wins. Thus use "full" by default in both places, but specify "slight" for some fonts here.
+		* Regarding GNOME overriding, it seems the one with lower hintstyle wins. Thus use "full" in GNOME to allow override at here.
 		-->
 		<!-- Turn on hinting -->
 		<edit name="hinting">
@@ -24,24 +26,24 @@
 		<edit name="antialias">
 			<bool>true</bool>
 		</edit>
-		<!-- Subpixel rendering: "none" means "grayscale" (combined with AA) -->
+		<!-- Subpixel antialiasing -->
 		<edit name="rgba">
-			<const>none</const>
+			<const>rgb</const>
 		</edit>
+		<!-- LCD filter to work with subpixel -->
 		<edit name="lcdfilter">
 			<const>lcddefault</const>
 		</edit>
-		<!-- Prefer BCI medium hint (need further tweak for some fonts) -->
-		<edit name="autohint">
-			<bool>false</bool>
-		</edit>
+		<!-- Prefer slight hint (vertical only) -->
 		<edit name="hintstyle">
-			<const>hintmedium</const>
+			<const>hintslight</const>
 		</edit>
 		<!-- Disable embedded bitmap (especially for Calibri, Monaco, etc.) -->
 		<edit name="embeddedbitmap">
 			<bool>false</bool>
 		</edit>
+		<!-- Don't explicitly disable autohint to make the auto fallback possible.
+		     Don't explicitly enable autohint to prefer BCI. -->
 	</match>
 
 	<!--
@@ -95,12 +97,16 @@
 		Specific Tweaks for Some Fonts
 	-->
 	<!-- autohint/hintstyle tweaks for certain Linux fonts -->
+	<!-- Some fonts that only look good under slight autohint -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>DejaVu</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
 		</edit>
 	</match>
 	<match target="font">
@@ -110,13 +116,69 @@
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
+		</edit>
 	</match>
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>Droid</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
+		</edit>
+	</match>
+	<!-- URW requires slight hinting -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>URW</string>
 		</test>
 		<edit name="hintstyle">
 			<const>hintslight</const>
+		</edit>
+	</match>
+	<!-- Turn on full BCI hinting for Google Roboto -->
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>Roboto</string>
+		</test>
+		<edit name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintfull</const>
+		</edit>
+	</match>
+	<!-- Turn on full BCI hinting for Liberation -->
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>Liberation</string>
+		</test>
+		<edit name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintfull</const>
+		</edit>
+	</match>
+	<!-- Special tweaks for Adobe CFF fonts -->
+	<match target="font">
+		<test name="fontformat">
+			<string>CFF</string>
+		</test>
+		<!-- Use native CFF full hinter -->
+		<edit name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintfull</const>
+		</edit>
+		<!-- Force grayscale to make CFF happy -->
+		<edit name="rgba">
+			<const>none</const>
 		</edit>
 	</match>
 	<!-- Force autohint for MS core fonts -->
@@ -216,15 +278,6 @@
 			<bool>true</bool>
 		</edit>
 	</match>
-	<!-- Use hintnone for Source Han Sans (hintfull will make chars too high) -->
-	<match target="font">
-		<test name="family" compare="contains">
-			<string>Source Han Sans</string>
-		</test>
-		<edit name="hintstyle">
-			<const>hintnone</const>
-		</edit>
-	</match>
 	<!-- Disable antialias for some small fonts -->
 	<!-- Some Chinese bitmap fonts (generic matching) -->
 	<match target="font">
@@ -237,6 +290,9 @@
 		<edit name="antialias">
 			<bool>false</bool>
 		</edit>
+		<edit name="rgba">
+			<const>none</const>
+		</edit>
 	</match>
 	<match target="font">
 		<test name="family" compare="contains">
@@ -247,6 +303,9 @@
 		</test>
 		<edit name="antialias">
 			<bool>false</bool>
+		</edit>
+		<edit name="rgba">
+			<const>none</const>
 		</edit>
 	</match>
 
@@ -262,7 +321,7 @@
 			<string>WenQuanYi Bitmap Song</string>
 		</edit>
 	</match>
-	<!-- Replace 'fixed' with 'monospace'. -->
+	<!-- Replace 'fixed' with 'monospace' -->
 	<match target="pattern">
 		<test name="family">
 			<string>fixed</string>
