update font conf

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -8,14 +8,13 @@
 	<match target="font">
 		<!--
 		Hinting related
-		Reference: https://weirdfellow.wordpress.com/2010/07/25/valid-autohinting-hinting-style-options/
 		* BCI is now compiled in by default.
-		* Adobe CFF is now supported.
 		* BCI is used when autohint=false.
-		* CFF only works with full hinting.
 		* Prefer BCI, but forcing some fonts to use autohint.
+		* Adobe CFF is now supported.
+		* CFF only works with full hinting and grayscale subpixel rendering.
+		* Force CFF hinting.
 		* Prefer slight hint, but forcing some fonts to use full hint.
-		* autohint does not work with subpixel rendering. Use grayscale instead.
 		* Regarding GNOME overriding, it seems the one with lower hintstyle wins. Thus use "full" in GNOME to allow override at here.
 		-->
 		<!-- Turn on hinting -->
@@ -140,7 +139,7 @@
 			<const>hintslight</const>
 		</edit>
 	</match>
-	<!-- Turn on full BCI hinting for Google Roboto -->
+	<!-- Turn on full BCI hinting for some fonts -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>Roboto</string>
@@ -152,10 +151,31 @@
 			<const>hintfull</const>
 		</edit>
 	</match>
-	<!-- Turn on full BCI hinting for Liberation -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>Liberation</string>
+		</test>
+		<edit name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintfull</const>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Carlito</string>
+		</test>
+		<edit name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintfull</const>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="family">
+			<string>Caladea</string>
 		</test>
 		<edit name="autohint">
 			<bool>false</bool>
