--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -8,14 +8,23 @@
 	<match target="font">
 		<!--
 		Hinting related
-		* BCI is now compiled in by default.
-		* BCI is used when autohint=false.
-		* Prefer BCI, but forcing some fonts to use autohint.
-		* Adobe CFF is now supported.
-		* CFF only works with full hinting and grayscale subpixel rendering.
-		* Force CFF hinting.
-		* Prefer slight hint, but forcing some fonts to use full hint.
-		* Regarding GNOME overriding, it seems the one with lower hintstyle wins. Thus use "full" in GNOME to allow override at here.
+		Based on ftview, it seems there are only four visually different legal combinations:
+		* Normal (grayscale?) autohint (full?)
+		* RGB-subpixel autohints (various geometry; one correct choice for each monitor)
+		* Light autohint (slight?)
+		* Normal (grayscale?) native hinter, rgba (various geometry) native hinter
+		  (Can't tell the difference; native hinters probably always use grayscale.)
+		Note: hintstyle is only for autohint!
+
+		Two native hinters are compiled in by default: BCI for TTF, CFF for OTF.
+		They are used when autohint=false and hintstyle=full.
+
+		* Prefer BCI, but force some fonts to use (light) autohint.
+		* Always use CFF hinting when available.
+		* When autohint is used, prefer full LCD autohint (rgb).
+		  Native hinters look the same under grayscale or rgb, so we simply always use rgb.
+
+		P.S. Regarding GNOME overriding, it seems the one with lower hintstyle wins. Thus use "full" in GNOME to allow override at here.
 		-->
 		<!-- Turn on hinting -->
 		<edit name="hinting">
@@ -33,16 +42,12 @@
 		<edit name="lcdfilter">
 			<const>lcddefault</const>
 		</edit>
-		<!-- Prefer slight hint (vertical only) -->
+		<!-- Default to full hint -->
 		<edit name="hintstyle">
-			<const>hintslight</const>
+			<const>hintfull</const>
 		</edit>
-		<!-- Disable embedded bitmap (especially for Calibri, Monaco, etc.) -->
-		<edit name="embeddedbitmap">
-			<bool>false</bool>
-		</edit>
-		<!-- Don't explicitly disable autohint to make the auto fallback possible.
-		     Don't explicitly enable autohint to prefer BCI. -->
+		<!-- Don't explicitly set autohint so that the default fallback mechanism is used.
+		     i.e. prefer native hinters, but fall back to autohint. -->
 	</match>
 
 	<!--
@@ -130,81 +135,41 @@
 			<const>hintslight</const>
 		</edit>
 	</match>
-	<!-- URW requires slight hinting -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>URW</string>
 		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
 		<edit name="hintstyle">
 			<const>hintslight</const>
 		</edit>
 	</match>
-	<!-- Turn on full BCI hinting for some fonts -->
-	<match target="font">
-		<test name="family" compare="contains">
-			<string>Roboto</string>
-		</test>
-		<edit name="autohint">
-			<bool>false</bool>
-		</edit>
-		<edit name="hintstyle">
-			<const>hintfull</const>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family" compare="contains">
-			<string>Liberation</string>
-		</test>
-		<edit name="autohint">
-			<bool>false</bool>
-		</edit>
-		<edit name="hintstyle">
-			<const>hintfull</const>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Carlito</string>
-		</test>
-		<edit name="autohint">
-			<bool>false</bool>
-		</edit>
-		<edit name="hintstyle">
-			<const>hintfull</const>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Caladea</string>
-		</test>
-		<edit name="autohint">
-			<bool>false</bool>
-		</edit>
-		<edit name="hintstyle">
-			<const>hintfull</const>
-		</edit>
-	</match>
-	<!-- Special tweaks for Adobe CFF fonts -->
+	<!-- Disable autohint for Adobe CFF fonts -->
 	<match target="font">
 		<test name="fontformat">
 			<string>CFF</string>
 		</test>
-		<!-- Use native CFF full hinter -->
 		<edit name="autohint">
 			<bool>false</bool>
 		</edit>
 		<edit name="hintstyle">
 			<const>hintfull</const>
 		</edit>
-		<!-- Force grayscale to make CFF happy -->
-		<edit name="rgba">
-			<const>none</const>
-		</edit>
 	</match>
 	<!-- Force autohint for MS core fonts -->
 	<match target="font">
-		<test name="family" compare="contains">
-			<string>Microsoft</string>
+		<test name="foundry" compare="contains">
+			<string>microsoft</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+	</match>
+	<match target="font">
+		<test name="foundry" compare="contains">
+			<string>monotype</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
@@ -212,120 +177,22 @@
 	</match>
 	<match target="font">
 		<test name="family" compare="contains">
-			<string>MS</string>
+			<string>SimSun</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
 	</match>
-	<match target="font">
-		<test name="family">
-			<string>Andale Mono</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Arial</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Comic Sans MS</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Georgia</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Impact</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Trebuchet MS</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Verdana</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Courier New</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Times New Roman</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family">
-			<string>Tahoma</string>
-		</test>
-		<edit name="autohint">
-			<bool>true</bool>
-		</edit>
-	</match>
-	<!-- Disable antialias for some small fonts -->
-	<!-- Some Chinese bitmap fonts (generic matching) -->
+	<!-- Disable antialias for some small fonts (e.g. embedded bitmap available) -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>SimSun</string>
 		</test>
 		<test compare="less" name="pixelsize">
-			<double>16</double>
+			<double>18</double>
 		</test>
 		<edit name="antialias">
 			<bool>false</bool>
-		</edit>
-		<edit name="rgba">
-			<const>none</const>
-		</edit>
-	</match>
-	<match target="font">
-		<test name="family" compare="contains">
-			<string>AR PL</string>
-		</test>
-		<test compare="less" name="pixelsize">
-			<double>14</double>
-		</test>
-		<edit name="antialias">
-			<bool>false</bool>
-		</edit>
-		<edit name="rgba">
-			<const>none</const>
 		</edit>
 	</match>
 
