Revert to autohint for AR PL UMing

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -195,6 +195,21 @@
 			<bool>false</bool>
 		</edit>
 	</match>
+	<!-- Disable embedded bitmap and force normal (grayscale) autohint for AR PL UMing -->
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>AR PL UMing</string>
+		</test>
+		<edit name="embeddedbitmap">
+			<bool>false</bool>
+		</edit>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+		<edit name="rgba">
+			<const>none</const>
+		</edit>
+	</match>
 
 	<!--
 		Rules Matching against Pattern
