match foundry instead of family for URW fonts

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -136,8 +136,8 @@
 		</edit>
 	</match>
 	<match target="font">
-		<test name="family" compare="contains">
-			<string>URW</string>
+		<test name="foundry" compare="contains">
+			<string>urw</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
@@ -214,15 +214,6 @@
 	<!--
 		Rules Matching against Pattern
 	-->
-	<!-- Replace some ugly/missing chinese fonts -->
-	<match target="pattern">
-		<test name="family">
-			<string>AR PL ShanHeiSun Uni</string>
-		</test>
-		<edit name="family" binding="same">
-			<string>WenQuanYi Bitmap Song</string>
-		</edit>
-	</match>
 	<!-- Replace 'fixed' with 'monospace' -->
 	<match target="pattern">
 		<test name="family">
@@ -232,6 +223,22 @@
 			<string>monospace</string>
 		</edit>
 	</match>
+	<!-- Replace some ugly/missing chinese fonts -->
+	<match target="pattern">
+		<test name="family">
+			<string>AR PL ShanHeiSun Uni</string>
+		</test>
+		<edit name="family" binding="same">
+			<string>WenQuanYi Bitmap Song</string>
+		</edit>
+	</match>
+	<!-- Some aliases for alternations (not force replacement) -->
+	<alias binding="same">
+		<family>Helvetica Neue</family>
+		<accept>
+			<family>TeX Gyre Heros</family>
+		</accept>
+	</alias>
 	<!-- Font Preference -->
 	<!-- created by WenQuanYi FcDesigner v0.5 -->
 	<match target="pattern">
