Use alias-prefer instead of match-prepend

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -213,6 +213,14 @@
 
 	<!--
 		Rules Matching against Pattern
+
+		Note: alias is heavily used here.
+		It is short for match on pattern and test on family (ignore blanks)
+		prefer  -> prepend
+		accept  -> append
+		default -> appendLast
+		51-local.conf is executed very early (before all font/language-specific defaults),
+		and thus everything prepended here has a higher priority than those.
 	-->
 	<!-- Replace 'fixed' with 'monospace' -->
 	<match target="pattern">
@@ -232,7 +240,7 @@
 			<string>WenQuanYi Bitmap Song</string>
 		</edit>
 	</match>
-	<!-- Some aliases for alternations (not force replacement) -->
+	<!-- Fallbacks that are not in defaults -->
 	<alias binding="same">
 		<family>Helvetica Neue</family>
 		<accept>
@@ -240,41 +248,40 @@
 		</accept>
 	</alias>
 	<!-- Font Preference -->
-	<!-- created by WenQuanYi FcDesigner v0.5 -->
-	<match target="pattern">
-		<test name="family"><string>sans-serif</string></test>
-		<edit name="family" mode="prepend" binding="strong">
-			<string>Source Sans Pro</string>
-			<string>Droid Sans</string>
-			<string>DejaVu Sans</string>
-			<string>Source Han Sans CN</string>
-			<string>Source Han Sans TWHK</string>
-			<string>Source Han Sans JP</string>
-			<string>Source Han Sans KR</string>
-			<string>WenQuanYi Micro Hei</string>
-			<string>WenQuanYi Zen Hei</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family"><string>serif</string></test>
-		<edit name="family" mode="prepend" binding="strong">
-			<string>Source Serif Pro</string>
-			<string>Droid Serif</string>
-			<string>DejaVu Serif</string>
-			<string>AR PL New Sung</string>
-			<string>AR PL UMing CN</string>
-			<string>AR PL UMing TW</string>
-			<string>WenQuanYi Bitmap Song</string>
-		</edit>
-	</match>
-	<match target="pattern">
-		<test name="family"><string>monospace</string></test>
-		<edit name="family" mode="prepend" binding="strong">
-			<string>DejaVu Sans Mono</string>
-			<string>Droid Sans Mono</string>
-			<string>Source Code Pro</string>
-			<string>WenQuanYi Micro Hei Mono</string>
-			<string>WenQuanYi Zen Hei Mono</string>
-		</edit>
-	</match>
+	<alias binding="same">
+		<family>sans-serif</family>
+		<prefer>
+			<family>Source Sans Pro</family>
+			<family>Droid Sans</family>
+			<family>DejaVu Sans</family>
+			<family>Source Han Sans CN</family>
+			<family>Source Han Sans TWHK</family>
+			<family>Source Han Sans JP</family>
+			<family>Source Han Sans KR</family>
+			<family>WenQuanYi Micro Hei</family>
+			<family>WenQuanYi Zen Hei</family>
+		</prefer>
+	</alias>
+	<alias binding="same">
+		<family>serif</family>
+		<prefer>
+			<family>Source Serif Pro</family>
+			<family>Droid Serif</family>
+			<family>DejaVu Serif</family>
+			<family>AR PL New Sung</family>
+			<family>AR PL UMing CN</family>
+			<family>AR PL UMing TW</family>
+			<family>WenQuanYi Bitmap Song</family>
+		</prefer>
+	</alias>
+	<alias binding="same">
+		<family>monospace</family>
+		<prefer>
+			<family>DejaVu Sans Mono</family>
+			<family>Droid Sans Mono</family>
+			<family>Source Code Pro</family>
+			<family>WenQuanYi Micro Hei Mono</family>
+			<family>WenQuanYi Zen Hei Mono</family>
+		</prefer>
+	</alias>
 </fontconfig>
