--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -100,8 +100,19 @@
 	<!--
 		Specific Tweaks for Some Fonts
 	-->
+	<!-- Disable autohint for Adobe CFF fonts (force native CFF hinter) -->
+	<match target="font">
+		<test name="fontformat">
+			<string>CFF</string>
+		</test>
+		<edit name="autohint">
+			<bool>false</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintfull</const>
+		</edit>
+	</match>
 	<!-- autohint/hintstyle tweaks for certain Linux fonts -->
-	<!-- Some fonts that only look good under slight autohint -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>DejaVu</string>
@@ -146,25 +157,16 @@
 			<const>hintslight</const>
 		</edit>
 	</match>
-	<!-- Disable autohint for Adobe CFF fonts -->
-	<match target="font">
-		<test name="fontformat">
-			<string>CFF</string>
-		</test>
-		<edit name="autohint">
-			<bool>false</bool>
-		</edit>
-		<edit name="hintstyle">
-			<const>hintfull</const>
-		</edit>
-	</match>
-	<!-- Force autohint for MS core fonts -->
+	<!-- Force slight autohint for MS core fonts -->
 	<match target="font">
 		<test name="foundry" compare="contains">
 			<string>microsoft</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
 		</edit>
 	</match>
 	<match target="font">
@@ -174,13 +176,20 @@
 		<edit name="autohint">
 			<bool>true</bool>
 		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
+		</edit>
 	</match>
+	<!-- SimSun has foundry "unknown" and is better under full autohint -->
 	<match target="font">
 		<test name="family" compare="contains">
 			<string>SimSun</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintfull</const>
 		</edit>
 	</match>
 	<!-- Disable antialias for some small fonts (e.g. embedded bitmap available) -->
