Only force hintslight for autohinted bold fonts

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -53,15 +53,6 @@
 	<!--
 		General Tweaks for Font Appearance
 	-->
-	<!-- Use hintslight for bold characters -->
-	<match target="font">
-		<test name="weight" compare="more">
-			<const>medium</const>
-		</test>
-		<edit name="hintstyle">
-			<const>hintslight</const>
-		</edit>
-	</match>
 	<!-- Fix CJK global advance -->
 	<match target="font">
 		<test target="pattern" name="lang" compare="contains">
@@ -217,6 +208,18 @@
 		</edit>
 		<edit name="rgba">
 			<const>none</const>
+		</edit>
+	</match>
+	<!-- Use hintslight for bold autohinted fonts (MUST BE AT THE END!) -->
+	<match target="font">
+		<test name="weight" compare="more">
+			<const>medium</const>
+		</test>
+		<test name="autohint" compare="eq">
+			<bool>true</bool>
+		</test>
+		<edit name="hintstyle">
+			<const>hintslight</const>
 		</edit>
 	</match>
 
