Force slight autohint for TeX Gyre

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -9,10 +9,10 @@
 		<!--
 		Hinting related
 		Based on ftview, it seems there are only four visually different legal combinations:
-		* Normal (grayscale?) autohint (full?)
+		* Normal (grayscale) autohint (hintfull)
 		* RGB-subpixel autohints (various geometry; one correct choice for each monitor)
-		* Light autohint (slight?)
-		* Normal (grayscale?) native hinter, rgba (various geometry) native hinter
+		* Light autohint (hintslight)
+		* Normal (grayscale) native hinter, rgba (various geometry) native hinter
 		  (Can't tell the difference; native hinters probably always use grayscale.)
 		Note: hintstyle is only for autohint!
 
@@ -20,9 +20,9 @@
 		They are used when autohint=false and hintstyle=full.
 
 		* Prefer BCI, but force some fonts to use (light) autohint.
-		* Always use CFF hinting when available.
-		* When autohint is used, prefer full LCD autohint (rgb).
-		  Native hinters look the same under grayscale or rgb, so we simply always use rgb.
+		* Always use CFF hinting when available (exceptions exist).
+		* For other fonts, prefer full LCD autohint (rgb).
+		  (Native hinters look the same under grayscale or rgb, so we simply always use rgb.)
 
 		P.S. Regarding GNOME overriding, it seems the one with lower hintstyle wins. Thus use "full" in GNOME to allow override at here.
 		-->
@@ -101,6 +101,18 @@
 		</edit>
 		<edit name="hintstyle">
 			<const>hintfull</const>
+		</edit>
+	</match>
+	<!-- Force slight autohint for some broken (non-Adobe) CFF fonts -->
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>TeX Gyre</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
 		</edit>
 	</match>
 	<!-- autohint/hintstyle tweaks for certain Linux fonts -->
