Use Source Han as the monospace CJK font and tweak WQY MicroHei

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -160,6 +160,17 @@
 			<const>hintslight</const>
 		</edit>
 	</match>
+	<match target="font">
+		<test name="family" compare="contains">
+			<string>WenQuanYi Micro Hei</string>
+		</test>
+		<edit name="autohint">
+			<bool>true</bool>
+		</edit>
+		<edit name="hintstyle">
+			<const>hintslight</const>
+		</edit>
+	</match>
 	<!-- Force slight autohint for MS core fonts -->
 	<match target="font">
 		<test name="foundry" compare="contains">
@@ -304,6 +315,7 @@
 			<family>DejaVu Sans Mono</family>
 			<family>Droid Sans Mono</family>
 			<family>Source Code Pro</family>
+			<family>Source Han Sans CN</family>
 			<family>WenQuanYi Micro Hei Mono</family>
 			<family>WenQuanYi Zen Hei Mono</family>
 		</prefer>
