--- a/home/byobu/.tmux.conf
+++ b/home/byobu/.tmux.conf
@@ -1,1 +1,3 @@
-set-window-option -g mode-mouse on
+set -g mouse on
+bind -n WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind -n WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
