Fix Microsoft and Monotype foundry matching

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -174,7 +174,7 @@
 	<!-- Force slight autohint for MS core fonts -->
 	<match target="font">
 		<test name="foundry" compare="contains">
-			<string>microsoft</string>
+			<string>MS</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
@@ -185,7 +185,7 @@
 	</match>
 	<match target="font">
 		<test name="foundry" compare="contains">
-			<string>monotype</string>
+			<string>Mono</string>
 		</test>
 		<edit name="autohint">
 			<bool>true</bool>
