Modify fontconfig to use Source Han Sans OTC instead of OTF

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -289,10 +289,9 @@
 			<family>Source Sans Pro</family>
 			<family>Droid Sans</family>
 			<family>DejaVu Sans</family>
-			<family>Source Han Sans CN</family>
-			<family>Source Han Sans TWHK</family>
-			<family>Source Han Sans JP</family>
-			<family>Source Han Sans KR</family>
+			<family>Source Han Sans SC</family>
+			<family>Source Han Sans TC</family>
+			<family>Source Han Sans</family>
 			<family>WenQuanYi Micro Hei</family>
 			<family>WenQuanYi Zen Hei</family>
 		</prefer>
@@ -315,7 +314,8 @@
 			<family>DejaVu Sans Mono</family>
 			<family>Droid Sans Mono</family>
 			<family>Source Code Pro</family>
-			<family>Source Han Sans CN</family>
+			<family>Source Han Sans SC</family>
+			<family>Source Han Sans</family>
 			<family>WenQuanYi Micro Hei Mono</family>
 			<family>WenQuanYi Zen Hei Mono</family>
 		</prefer>
