Use Source Han Serif

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -302,9 +302,9 @@
 			<family>Source Serif Pro</family>
 			<family>Droid Serif</family>
 			<family>DejaVu Serif</family>
-			<family>AR PL New Sung</family>
-			<family>AR PL UMing CN</family>
-			<family>AR PL UMing TW</family>
+			<family>Source Han Serif SC</family>
+			<family>Source Han Serif TC</family>
+			<family>Source Han Serif</family>
 			<family>WenQuanYi Bitmap Song</family>
 		</prefer>
 	</alias>
