Fix wqy bitmap song

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -305,7 +305,7 @@
 			<family>Source Han Serif SC</family>
 			<family>Source Han Serif TC</family>
 			<family>Source Han Serif</family>
-			<family>WenQuanYi Bitmap Song</family>
+			<family>WenQuanYi WenQuanYi Bitmap Song</family>
 		</prefer>
 	</alias>
 	<alias binding="same">
